# discordBot

./: Cargo.toml  startup.sh
src/: main.rs
