[package]
name = "discord_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
text-to-png = "0.2.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git" }
image = "0.24.8"

